# 211H-Honors-Project-Story-Mode-Game

./: CMakeLists.txt  chapters.cpp  dialoguebox.cpp  dialoguebox.h  gamewindow.cpp  gamewindow.h  imgs.qrc  main.cpp  mainwindow.cpp  maya-story.json  mayanpc.h  player.cpp  player.h  quiz.cpp  quiz.h  storymanager.cpp  storymanager.h  storyscene.cpp  storyscene.h
